# WisardLibrary

./: CMakeLists.txt  README.md  test.cpp  wisard.cpp  wisard.hpp  wnet_lib.cpp  wnet_lib.hpp
WiSARDpy/: test.py  wisard.py  wisardwrapper.py
